add basic structure

--- a/index.html
+++ b/index.html
@@ -1,13 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <link rel="stylesheet" href="./styles/style.css">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <link rel="stylesheet" href="./styles/style.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Homepage</title>
-</head>
-<body>
-    <p>Hello!</p>
-    
-</body>
+  </head>
+  <body>
+    <div class="header">
+      <div class="profile-pic"></div>
+      <div class="aboutme">
+        <div class="text">
+          <div class="text-title"></div>
+          <div class="text-body"></div>
+        </div>
+      </div>
+    </div>
+    <div class="project">
+      <div class="first"></div>
+      <div class="second"></div>
+      <div class="third"></div>
+      <div class="fourth"></div>
+    </div>
+    <div class="contact">
+      <div class="text">
+        <div class="text-title"></div>
+        <div class="text-body"></div>
+      </div>
+      <div class="contact-img"></div>
+    </div>
+  </body>
 </html>
