--- a/index.html
+++ b/index.html
@@ -1,18 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" media='screen and (min-width: 140px) and (max-width: 400px)' href="styles/mobile-style.css"/>
+    <link rel="stylesheet" media='screen and (min-width: 401px) and (max-width: 700px)' href="styles/tablet-style.css"/>
+    <link rel="stylesheet" media='screen and (min-width: 701px)' href="styles/mobile-style.css"/>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Homepage</title>
   </head>
   <body>
+    <img class="bg" src="imgs/goals/bg.jpg">
     <div class="header">
-      <div class="profile-pic"></div>
+      <div class="profile-pic">
+        <img src="imgs/placeholder/pexels-marvin-nast-21038401.jpg" alt="Profile picture">
+      </div>
       <div class="aboutme">
         <div class="text">
-          <div class="text-title"></div>
-          <div class="text-body"></div>
+          <div class="text-title"><h3>About me</h3></div>
+          <div class="text-body">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras efficitur felis justo, vitae hendrerit metus feugiat sed. Praesent tincidunt, ex sed iaculis porta, risus eros suscipit neque, nec blandit ligula dolor vitae nibh. Duis molestie elit et urna commodo dignissim. Quisque eget risus iaculis, dapibus est id, accumsan mi. Vestibulum porta ullamcorper fermentum. Aliquam porta non leo sit amet porta. Maecenas ultricies scelerisque mauris, nec maximus lacus laoreet id. Etiam eu augue sed nunc lacinia pulvinar a consectetur urna. Integer arcu tortor, congue eget lobortis quis, tincidunt vitae purus. Nunc non blandit dui, id bibendum diam. Nam nec neque felis. Pellentesque vitae imperdiet ipsum. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Fusce a interdum elit, ac faucibus erat. Ut eu eros ex.</p>
+            
+            </div>
         </div>
       </div>
     </div>
