add mobile layout

--- a/index.html
+++ b/index.html
@@ -1,41 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" media='screen and (min-width: 140px) and (max-width: 400px)' href="styles/mobile-style.css"/>
-    <link rel="stylesheet" media='screen and (min-width: 401px) and (max-width: 700px)' href="styles/tablet-style.css"/>
-    <link rel="stylesheet" media='screen and (min-width: 701px)' href="styles/mobile-style.css"/>
+    <link
+      rel="stylesheet"
+      media="screen and (min-width: 140px) and (max-width: 400px)"
+      href="styles/mobile-style.css"
+    />
+    <link
+      rel="stylesheet"
+      media="screen and (min-width: 401px) and (max-width: 700px)"
+      href="styles/tablet-style.css"
+    />
+    <link
+      rel="stylesheet"
+      media="screen and (min-width: 701px)"
+      href="styles/mobile-style.css"
+    />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Homepage</title>
   </head>
   <body>
-    <img class="bg" src="imgs/goals/bg.jpg">
     <div class="header">
       <div class="profile-pic">
-        <img src="imgs/placeholder/pexels-marvin-nast-21038401.jpg" alt="Profile picture">
+        <img
+          src="imgs/placeholder/pexels-marvin-nast-21038401.jpg"
+          alt="Profile picture"
+        />
       </div>
       <div class="aboutme">
         <div class="text">
           <div class="text-title"><h3>About me</h3></div>
           <div class="text-body">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras efficitur felis justo, vitae hendrerit metus feugiat sed. Praesent tincidunt, ex sed iaculis porta, risus eros suscipit neque, nec blandit ligula dolor vitae nibh. Duis molestie elit et urna commodo dignissim. Quisque eget risus iaculis, dapibus est id, accumsan mi. Vestibulum porta ullamcorper fermentum. Aliquam porta non leo sit amet porta. Maecenas ultricies scelerisque mauris, nec maximus lacus laoreet id. Etiam eu augue sed nunc lacinia pulvinar a consectetur urna. Integer arcu tortor, congue eget lobortis quis, tincidunt vitae purus. Nunc non blandit dui, id bibendum diam. Nam nec neque felis. Pellentesque vitae imperdiet ipsum. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Fusce a interdum elit, ac faucibus erat. Ut eu eros ex.</p>
-            
-            </div>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras
+              efficitur felis justo, vitae hendrerit metus feugiat sed. Praesent
+              tincidunt, ex sed iaculis porta, risus eros suscipit neque, nec
+              blandit ligula dolor vitae nibh. Duis molestie elit et urna
+              commodo dignissim. Quisque eget risus iaculis, dapibus est id,
+              accumsan mi. Vestibulum porta ullamcorper fermentum. Aliquam porta
+              non leo sit amet porta. Maecenas ultricies scelerisque mauris, nec
+              maximus lacus laoreet id. Etiam eu augue sed nunc lacinia pulvinar
+              a consectetur urna. Integer arcu tortor, congue eget lobortis
+              quis, tincidunt vitae purus. Nunc non blandit dui, id bibendum
+              diam. Nam nec neque felis. Pellentesque vitae imperdiet ipsum.
+              Orci varius natoque penatibus et magnis dis parturient montes,
+              nascetur ridiculus mus. Fusce a interdum elit, ac faucibus erat.
+              Ut eu eros ex.
+            </p>
+          </div>
         </div>
       </div>
     </div>
     <div class="project">
-      <div class="first"></div>
-      <div class="second"></div>
-      <div class="third"></div>
-      <div class="fourth"></div>
+      <h3>My Work</h3>
+      <div class="card-container">
+        <div class="card"></div>
+        <div class="card"></div>
+        <div class="card"></div>
+        <div class="card"></div>
+      </div>
     </div>
     <div class="contact">
       <div class="text">
-        <div class="text-title"></div>
-        <div class="text-body"></div>
+        <div class="text-title">
+          <h3>Contact me!</h3>
+        </div>
+        <div class="text-body">
+          <p>
+            Plrease get in touvh if you think our work could be mutually beneficial!
+            <br>
+            <br>
+
+            1234 Random Road<br>
+            Random Town, MI 1234
+            <br>
+            <br>
+
+            125-232-3241<br>
+            test@email.com
+          </p>
+        </div>
       </div>
-      <div class="contact-img"></div>
+      <div class="contact-img">
+        <img src="./imgs/placeholder/iam_os-jst9zmbCD58-unsplash.jpg">
+      </div>
     </div>
   </body>
 </html>
